Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
 sources:
-  "maven-pmd-plugin-2.5-source-release.zip:"	4c7bd6a76a8428da40d3ae487dc94254620b7380
-  "maven-pmd-plugin-depmap.xml:"	ddd90f11fe396b7fac5e56b6cd553acde437b428
+  maven-pmd-plugin-3.0.1-source-release.zip: eaff28223a2fd0d8b19fdc04fd90bf8b4dec0f85
